<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aprofile_tv_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/aprofile_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.2"
                android:text="@string/aprofile_firstname"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/aprofile_et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:weightSum="1">

            <TextView
                android:text="@string/aprofile_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/aprofile_et_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.2"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/aprofile_height"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/aprofile_feet" />

            <Spinner
                android:id="@+id/aprofile_dd_feet"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/aprofile_inches" />

            <Spinner
                android:id="@+id/aprofile_dd_inches"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.2"
                android:text="@string/aprofile_weight"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/aprofile_et_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="number" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/aprofile_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/aprofile_gender"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioButton
                android:id="@+id/aprofile_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/aprofile_male" />

            <RadioButton
                android:id="@+id/aprofile_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aprofile_female"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/aprofile_goal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"/>

        <Spinner
            android:id="@+id/aprofile_dd_goal"
            android:layout_width="100dp"
            android:layout_height="39dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"/>

        <Button
            android:id="@+id/aprofile_btn_saveprofile"
            android:onClick="saveProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aprofile_save" />

        <Button
            android:id="@+id/aprofile_btn_submitprofile"
            android:onClick="updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
