<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_image"
    android:orientation="vertical"
    tools:context="in.jiyofit.the_app.LoginActivity">

    <EditText
        android:id="@+id/alogin_et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@color/translucentWhite"/>

    <EditText
        android:id="@+id/alogin_et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@color/translucentWhite"/>

    <Button
        android:id="@+id/alogin_btn_login"
        android:onClick="userLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/alogin_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@color/translucentBlack"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/alogin_btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/alogin_btn_signupnow"
        android:onClick="registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="end"
        android:text="@string/alogin_signupnow"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@color/translucentBlack" />

</LinearLayout>
